--- a/L4DStats/.settings/org.eclipse.wst.common.component
+++ b/L4DStats/.settings/org.eclipse.wst.common.component
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?><project-modules id="moduleCoreId" project-version="1.5.0">
-    <wb-module deploy-name="L4DStats">
+    <wb-module deploy-name="L4DPerspective">
         <wb-resource deploy-path="/" source-path="/WebContent" tag="defaultRootSource"/>
         <wb-resource deploy-path="/WEB-INF/classes" source-path="/src"/>
-        <property name="context-root" value="L4DStats"/>
-        <property name="java-output-path" value="/L4DStats/build/classes"/>
+        <property name="context-root" value="L4DPerspective"/>
+        <property name="java-output-path" value="/L4DPerspective/build/classes"/>
     </wb-module>
 </project-modules>
