--- a/L4DStats/WebContent/css/cover.css
+++ b/L4DStats/WebContent/css/cover.css
@@ -36,6 +36,10 @@ body {
   text-shadow: 0 1px 3px rgba(0,0,0,.5);
 }
 
+table{
+	border="1"
+}
+
 /* Extra markup and styles for table-esque vertical and horizontal centering */
 .site-wrapper {
   display: table;
@@ -58,6 +62,8 @@ body {
 .inner {
   padding: 30px;
 }
+
+
 
 
 /*
@@ -164,5 +170,10 @@ body {
 }
 
 #colorfont{
+	color: black;
+}
+
+.button
+{
 	color: black;
 }
